--- a/app/composer.json
+++ b/app/composer.json
@@ -9,8 +9,9 @@
         "ext-iconv": "*",
         "doctrine/annotations": "^2.0",
         "doctrine/doctrine-bundle": "^2.11",
-        "doctrine/orm": "^2.17",
         "doctrine/doctrine-migrations-bundle": "^3.3",
+        "doctrine/orm": "^2.17",
+        "knplabs/knp-paginator-bundle": "6.3",
         "phpdocumentor/reflection-docblock": "^5.4",
         "phpstan/phpdoc-parser": "^1.29",
         "symfony/asset": "6.4.*",
@@ -43,6 +44,7 @@
         "symfony/web-link": "6.4.*",
         "symfony/yaml": "6.4.*",
         "twig/extra-bundle": "^2.12|^3.0",
+        "twig/intl-extra": "^3.10",
         "twig/twig": "^2.12|^3.0"
     },
     "config": {
