--- a/app/composer.json
+++ b/app/composer.json
@@ -109,12 +109,12 @@
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.6",
-        "escapestudios/symfony2-coding-standard": "*",
+        "escapestudios/symfony2-coding-standard": "^3.13",
         "fakerphp/faker": "^1.23",
-        "friendsofphp/php-cs-fixer": "*",
+        "friendsofphp/php-cs-fixer": "^3.64",
         "phpunit/phpunit": "^9.5",
         "rector/rector": "^1.0",
-        "squizlabs/php_codesniffer": "*",
+        "squizlabs/php_codesniffer": "^3.10",
         "symfony/browser-kit": "6.4.*",
         "symfony/css-selector": "6.4.*",
         "symfony/debug-bundle": "6.4.*",
